# calender_sync

./: .dockerignore  Dockerfile  LICENSE  README.md  calendar_sync.py  example.env  pyproject.toml  test_calendar_sync.py  transcript.md
.github/workflows/: ghcr.yaml
